--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,14 @@
 		<version>2.9.6</version>
 	</dependency>
 	
+	<!-- thumbnail -->
+	<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+	<dependency>
+	    <groupId>net.coobird</groupId>
+	    <artifactId>thumbnailator</artifactId>
+	    <version>0.4.13</version>
+	</dependency>
+	
 	<!-- gson -->
 	<dependency>
 		<groupId>com.google.code.gson</groupId>
