--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,20 @@
 	    <artifactId>spring-security-config</artifactId>
 	    <version>5.1.5.RELEASE</version>
 	</dependency>
-			 
+	
+	<!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz-jobs -->
+	<dependency>
+	    <groupId>org.quartz-scheduler</groupId>
+	    <artifactId>quartz-jobs</artifactId>
+	    <version>2.3.2</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
+	<dependency>
+	    <groupId>org.quartz-scheduler</groupId>
+	    <artifactId>quartz</artifactId>
+	    <version>2.3.2</version>
+	</dependency>
+				 
 	</dependencies>
     <build>
         <plugins>
